feat: add auth API
